--- a/firmware/components/cmd_csi_recv/CMakeLists.txt
+++ b/firmware/components/cmd_csi_recv/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_component_register(
     SRCS "cmd_csi_recv.c"
     INCLUDE_DIRS .
-    REQUIRES console esp_wifi cmd_radio
+    REQUIRES console esp_wifi cmd_radio esp_timer
 )
