--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,6 @@
 /software/ *.csv
 /software/espcsienv
 /software/software_lite/espvenv
-
+/software
+/software_lite/CSI_key_1.py
+/software_lite/CSI_key_2.py
