--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 /firmware/build
 /firmware/.vscode
-/espcsienv
+/espenv
 /software/software_lite/espvenv
 /software_lite/CSI_key_1.py
 /software_lite/CSI_key_2.py
+/software_lite/*.csv
+software_lite/alice.csv
+software_lite/bob.csv
+software_lite/eve.csv
